After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753903 - wavpackdec: fix taglist memory leak
wavpackdec: fix taglist memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-21 03:20 UTC by Vineeth
Modified: 2015-08-28 18:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix taglist leak (904 bytes, patch)
2015-08-21 03:21 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-08-21 03:20:51 UTC
When passing the taglist to gst_audio_decoder_merge_tags, the reference is increased by audiodecoder and the caller should free the taglist being passed.
Comment 1 Vineeth 2015-08-21 03:21:48 UTC
Created attachment 309779 [details] [review]
fix taglist leak
Comment 2 Sebastian Dröge (slomo) 2015-08-21 07:22:35 UTC
commit 1d23930cd738ac365b3ec242c2017fa67743292e
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Fri Aug 21 12:20:59 2015 +0900

    wavpackdec: fix taglist memory leak
    
    When passing the taglist to gst_audio_decoder_merge_tags, the reference is increased
    by audiodecoder and the caller should free the taglist being passed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=753903